--- a/Html files/about.html
+++ b/Html files/about.html
@@ -20,11 +20,55 @@
             <li><a class="links" href="">Contact</a></li>
             <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
         </ul>
-
-        <header id="about-header">
-            <h2>About US</h2>
-        </header>
     </nav>
+
+    <header id="about-header">
+        <h2>#About <strong>US</strong></h2>
+    </header>
+
+    <section id="main-about">
+        <div class="picture">
+            
+        </div>
+        <div class="picture-contents">
+            <h3>Men`s wear</h3>
+            <p>At Clothing Shop Online, we’ve made it our mission to provide simple, affordable wardrobe staples to people who love to live. We’ve got the looks you want, from the brands you love, in the colors and sizes you need.</p>
+            <div class="button">
+                <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
+            </div>
+        </div>
+    </section>
+
+    <section id="main2-about" >
+        <div class="picture2-contents">
+            <h3>Who are We</h3>
+            <p><strong class="little">UNO</strong> caters to thoughtful shoppers who appreciate unique designs and top quality pieces you just can’t find anywhere else. We are constantly curating fresh new collections and looking for the next big thing our customers will love. Founded in Tashkent in 2015, we are proud to be your Online Clothing Shop that you can rely on for our expert service and care.</p>
+            <div class="button">
+                <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
+            </div>
+        </div>
+
+        <div class="info">
+            <img src="/imagees/A former J_Crew exec just opened a menswear paradise for the modern guy who 'wants to look American'.jpg"alt="">
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+        <h4>&copy; All right Reserved</h4>
+    </footer>
     
 </body>
 </html>
