Header for products has been completed

--- a/Html files/index.html
+++ b/Html files/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    <header>
+    <header id="main-header">
         <div class="contents">
             <h1>Welcome to <strong>UNO</strong></h1>
             <p>Looking good isn't self-importance; it's self-respect</p>
