Some images has been added. javascript code has been added to animate objects while scrolling. header and first section in the Product Htnl file has been completed

--- a/Html files/products.html
+++ b/Html files/products.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Css files/products.css">
     <link rel="stylesheet" href="/Css files/style.css">
-    <title>Document</title>
+    <script src="/JS files/main.js"></script>
+    <title>Products</title>
 </head>
 <body>
     <nav>
@@ -23,14 +24,60 @@
     </nav>
 
     <header id="products-header">
-        <div class="product-content">
+        <div class="product-content reveal">
             <h3>Style is a reflection of your attitude</h3>
-            <div class="button-">
+            <div class="button reveal">
                 <button class="btn-product"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
             </div>
         </div>
         
     </header>
+
+    <section id="sign-in" >
+        <div class="signup reveal">
+            <h3>Sign up of 20% Dicount</h3>
+            <p>Find your role creatively from UNO</p>
+        </div>
+        <div class="button">
+            <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
+        </div>
+
+    </section>
+
+    <section id="product3-section">
+        <div class="style reveal">
+            <h2>Featured Products</h2>
+        </div>
+
+        <div class="blogs">
+           <div class="blogs-in">
+            <div class="blog1 reveal">
+                <h2 class="blog-heading">Bags</h2>
+                <a class="blog-link" href="#">Find</a>
+            </div>
+
+            <div class="blog2 reveal">
+                <h2 class="blog-heading">Coats</h2>
+                <a class="blog-link" href="#">Find</a>
+            </div>
+
+            <div class="blog3 reveal">
+                <h2 class="blog-heading">T-Shirts</h2>
+                <a class="blog-link" href="#">Find</a>
+            </div>
+
+            <div class="blog4 reveal">
+                <h2 class="blog-heading">Shoes</h2>
+                <a class="blog-link" href="#">Find</a>
+            </div>
+           </div>
+
+            <div class="blog5 reveal">
+                <h2 class="blog-heading">LimitedEditions</h2>
+                <a class="blog-link" href="#">Find</a>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
