--- a/Html files/about.html
+++ b/Html files/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Css files/style.css">
     <link rel="stylesheet" href="/Css files/about.css">
+    <script src="/JS files/main.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -22,33 +23,32 @@
         </ul>
     </nav>
 
-    <header id="about-header">
+    <header id="about-header" class="reveal">
         <h2>#About <strong>US</strong></h2>
     </header>
-
     <section id="main-about">
-        <div class="picture">
+        <div class="picture reveal">
             
         </div>
-        <div class="picture-contents">
+        <div class="picture-contents reveal">
             <h3>Men`s wear</h3>
             <p>At Clothing Shop Online, we’ve made it our mission to provide simple, affordable wardrobe staples to people who love to live. We’ve got the looks you want, from the brands you love, in the colors and sizes you need.</p>
-            <div class="button">
+            <div class="button reveal">
                 <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
             </div>
         </div>
     </section>
 
     <section id="main2-about" >
-        <div class="picture2-contents">
+        <div class="picture2-contents reveal">
             <h3>Who are We</h3>
-            <p><strong class="little">UNO</strong> caters to thoughtful shoppers who appreciate unique designs and top quality pieces you just can’t find anywhere else. We are constantly curating fresh new collections and looking for the next big thing our customers will love. Founded in Tashkent in 2015, we are proud to be your Online Clothing Shop that you can rely on for our expert service and care.</p>
+            <p><strong class="little reveal">UNO</strong> caters to thoughtful shoppers who appreciate unique designs and top quality pieces you just can’t find anywhere else. We are constantly curating fresh new collections and looking for the next big thing our customers will love. Founded in Tashkent in 2015, we are proud to be your Online Clothing Shop that you can rely on for our expert service and care.</p>
             <div class="button">
                 <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
             </div>
         </div>
 
-        <div class="info">
+        <div class="info reveal">
             <img src="/imagees/A former J_Crew exec just opened a menswear paradise for the modern guy who 'wants to look American'.jpg"alt="">
         </div>
     </section>
