--- a/Html files/index.html
+++ b/Html files/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Css files/style.css">
+    <script src="/JS files/main.js"></script>
     <title>UNO</title>
 </head>
 <body>
@@ -22,23 +23,23 @@
     </nav>
 
     <header id="main-header">
-        <div class="contents">
+        <div class="contents reveal">
             <h1>Welcome to <strong>UNO</strong></h1>
             <p>Looking good isn't self-importance; it's self-respect</p>
             <div class="button">
                 <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">More</a></button>
             </div>
         </div>
-        <div class="images">
+        <div class="images reveal">
             <img src="/imagees/preview.png" alt="">
         </div>
     </header>
 
     <section class="section1">
-        <div class="style">
+        <div class="style reveal">
             <h2>Our style</h2>
         </div>
-       <div class="main-content">
+       <div class="main-content reveal">
         <div class="section1-contents">
             <img src="/imagees/beautiful-stylish-groom-s-cufflinks-shirt.jpg" alt="">
             <h2>The Fashionisto</h2>
@@ -61,26 +62,26 @@
 
 
     <section class="home-page-parts">
-        <div class="part1">
+        <div class="part1 reveal">
             <h3>T-Shirt Summer 2022 Collection..</h3>
             <p><a href="#">Shop now</a></p>
         </div>
 
-        <div class="part2">
+        <div class="part2 reveal">
             <h3>Sneakers 2022 Collection</h3>
             <p><a href="#">Shop now</a></p>
         </div>
     </section>
 
 
-    <section class="most-selling">
+    <section class="most-selling reveal">
         <div class="style">
             <h2>Most selling items</h2>
         </div>
 
 
         <div class="selling">
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (1).jpg" alt="">
                 <div class="item-contents">
                     <h3>Sneakerss</h3>
@@ -88,7 +89,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (2).jpg" alt="">
                 <div class="item-contents">
                     <h3>Coat</h3>
@@ -96,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (3).jpg" alt="">
                 <div class="item-contents">
                     <h3>T-shirt</h3>
@@ -104,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (4).jpg" alt="">
                 <div class="item-contents">
                     <h3>T-shirt</h3>
@@ -112,7 +113,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (5).jpg" alt="">
                 <div class="item-contents">
                     <h3>Sweater</h3>
@@ -120,7 +121,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (6).jpg" alt="">
                 <div class="item-contents">
                     <h3>Trousers</h3>
@@ -128,7 +129,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (7).jpg" alt="">
                 <div class="item-contents">
                     <h3>Loro Piano</h3>
@@ -136,7 +137,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (8).jpg" alt="">
                 <div class="item-contents">
                     <h3>Hats</h3>
@@ -144,7 +145,7 @@
                 </div>
             </div>
 
-            <div class="items">
+            <div class="items reveal">
                 <img src="/imagees/top selling (9).jpg" alt="">
                 <div class="item-contents">
                     <h3>Watch</h3>
@@ -154,7 +155,7 @@
         </div>
     </section>
 
-    <section class="subscribe">
+    <section class="subscribe reveal">
         <div class="subscribe-contents">
             <h3>Subscribe to the Newsletter</h3>
             <p>You can find and receive all information about his clothing store and find exact location through US</p>
