--- a/Html files/products.html
+++ b/Html files/products.html
@@ -52,7 +52,7 @@
         <div class="blogs">
            <div class="blogs-in">
             <div class="blog1 reveal">
-                <h2 class="blog-heading">Bags</h2>
+                <h2 class="blog-heading">Sneakers</h2>
                 <a class="blog-link" href="#">Find</a>
             </div>
 
@@ -75,6 +75,52 @@
             <div class="blog5 reveal">
                 <h2 class="blog-heading">LimitedEditions</h2>
                 <a class="blog-link" href="#">Find</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="popular-products">
+        <div class="style reveal">
+            <h2>Popular Products</h2>
+        </div>
+
+        <div class="populars">
+            <div class="p-contents reveal">
+                <img src="/imagees/products-image (1).jpg" alt="">
+                <h3>Sheep Skin Coat</h3>
+                <a href="#">40$</a>
+            </div>
+
+            <div class="p-contents reveal">
+                <img src="/imagees/products-image (2).jpg" alt="">
+                <h3>Casual Hoodie</h3>
+                <a href="#">34$</a>
+            </div>
+
+            <div class="p-contents reveal">
+                <img src="/imagees/products-image (3).jpg" alt="">
+                <h3>Classic Style Pants</h3>
+                <a href="#">15$</a>
+            </div>
+
+            <div class="p-contents reveal">
+                <img src="/imagees/products-image (4).jpg" alt="">
+                <h3>Suit Blazer</h3>
+                <a href="#">55$</a>
+            </div>
+        </div>
+
+        <div class="view">
+            <button class="btn product-btn"><a href="#">View all products</a></button>
+        </div>
+    </section>
+
+
+    <section id="advertisement">
+        <div class="ad-div">
+            <h2>More limited editions off men`s perfume are available now!</h2>
+            <div class="button reveal">
+                <button class="btn-product"><a href="https://www.instagram.com/uno.mens.wear/">Click for more</a></button>
             </div>
         </div>
     </section>
