--- a/Html files/products.html
+++ b/Html files/products.html
@@ -117,13 +117,69 @@
 
 
     <section id="advertisement">
-        <div class="ad-div">
-            <h2>More limited editions off men`s perfume are available now!</h2>
+        <div class="ad reveal">
+            <h4 class="reveal">More limited editions off men`s perfume are available now!</h2>
             <div class="button reveal">
-                <button class="btn-product"><a href="https://www.instagram.com/uno.mens.wear/">Click for more</a></button>
+                <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">Click for more</a></button>
             </div>
         </div>
     </section>
+
+    <section id="perfume">
+        <div class="perfumes">
+            <div class="perfume-contents reveal">
+                <img src="/imagees/perfume.webp" alt="">
+                <div class="cost">
+                    <h3>Valentino</h3>
+                    <a href="#">25$</a>
+                </div>
+            </div>
+
+            <div class="perfume-contents reveal">
+                <img src="/imagees/perfumes (1).webp" alt="">
+                <div class="cost">
+                    <h3>Burberry</h3>
+                    <a href="#">38$</a>
+                </div>
+            </div>
+
+            <div class="perfume-contents reveal">
+                <img src="/imagees/perfumes (2).webp" alt="">
+                <div class="cost">
+                    <h3>Jimmy Choo-Blue</h3>
+                    <a href="#">45$</a>
+                </div>
+            </div>
+
+            <div class="perfume-contents reveal">
+                <img src="/imagees/perfumes (3).webp" alt="">
+                <div class="cost">
+                    <h3>Sauvage</h3>
+                    <a href="#">55$</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="subscribe reveal">
+        <div class="subscribe-contents">
+            <h3>Subscribe to the Newsletter</h3>
+            <p>You can find and receive all information about his clothing store and find exact location through US</p>
+        </div>
+
+        <div class="forms">
+            <form action="">
+                <input type="text" name="" placeholder="Enter your E-mail address!">
+                <button class="submit">Submit</button>
+            </form>
+        </div>
+    </section>
+
+
+    <footer>
+        <h4>&copy; All right Reserved</h4>
+    </footer>
     
 </body>
 </html>
