Login page has been completed and some objects has been altered

--- a/Html files/index.html
+++ b/Html files/index.html
@@ -17,7 +17,7 @@
             <li><a class="links active" href="/Html files/index.html">Home</a></li>
             <li><a class="links" href="/Html files/about.html">About</a></li>
             <li><a class="links" href="/Html files/products.html">Products</a></li>
-            <li><a class="links" href="">Contact</a></li>
+            <li><a class="links" href="/Html files/contact.html">Log in</a></li>
             <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
         </ul>
     </nav>
@@ -175,6 +175,10 @@
     <footer>
         <h4>&copy; All right Reserved</h4>
     </footer>
+
+    <script>
+    alert("This website was created to fulfill Web Technology modules requirements and does not represent an actual company or service")
+        </script>
     
 </body>
 </html>
