--- a/Html files/about.html
+++ b/Html files/about.html
@@ -18,7 +18,7 @@
             <li><a class="links" href="/Html files/index.html">Home</a></li>
             <li><a class="links active" href="/Html files/about.html">About</a></li>
             <li><a class="links" href="/Html files/products.html">Products</a></li>
-            <li><a class="links" href="/Html files/contact.html">Contact</a></li>
+            <li><a class="links" href="/Html files/contact.html">Log in</a></li>
             <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
         </ul>
     </nav>
