--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -6,104 +6,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Css files/contact.css">
     <link rel="stylesheet" href="/Css files/style.css">
-    <title>Document</title>
+    <title>Singup Login form</title>
 </head>
 <body>
 
-    <div class="wrapper">
-        <div class="title-text">
-            <div class="title-login">Login Form
-            </div>
 
-            <div class="title-Signup">Signup Form
-            </div>
-
+    <nav>
+        <div class="logo">
+            <img src="/imagees/uno__1_-removebg-preview.png" alt="">
         </div>
-
-        <div class="Form-container">
-            <div class="slide-controls">
-                <input type="radio" name="slide" id="Login" checked>
-                <input type="radio" name="slide" id="Signup">
-                <label for="Login" class="slide">Login</label>
-                <label for="Signup" class="slide Signup">Sign Up</label>
-                <div class="slide-tab"></div>
-            </div>
-        </div>
-
-        <div class="Form-inner">
-            <form action="#" class="Login">
-                <div class="field">
-                    <input type="text" name="" placeholder="Your E-mail address!" required >
-                </div>
-                <div class="field">
-                    <input type="password" name="" placeholder="Enter your password!" required >
-                </div>
-                <div class="passs-link">
-                    <a href="#">Forgot password?</a>
-                </div> 
-                <div class="field-btn">
-                    <div class="btn-layer"></div>
-                    <input type="submit" value="Login">
-                </div>
-                <div class="Signup-link">Not a member? <a href="#">Sign Up now</a></div>
-            </form>
-
-            <form action="#" class="Signup">
-                <div class="field">
-                    <input type="text" placeholder="Enter E-mail address" required>
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Create password">
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Confirm password" required>
-                </div>
-                <div class="field-btn">
-                    <div class="btn-layer"></div>
-                    <input type="submit" value="Signup">
-                </div>
-            </form>
-           
-        </div>
-
-
-    </div>
+        <ul>
+            <li><a class="links" href="/Html files/index.html">Home</a></li>
+            <li><a class="links" href="/Html files/about.html">About</a></li>
+            <li><a class="links" href="/Html files/products.html">Products</a></li>
+            <li><a class="links active" href="/Html files/contact.html">Log in</a></li>
+            <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
+        </ul>
+    </nav>
 
 
 
 
-
-    <!-- <section class="section2">
-        <div class="style">
-            <h2>Where you can finds US</h2>
-        </div>
-
-        <div class="places">
-            <div class="place-contents">
-                <div class="orient">
-                    <i ><img src="/imagees/location.png" alt=""></i>
-                    <h2>Farhod Street</h2>
-                    <a href="#">Find</a>
-                </div>
+    <header id="contact-header">
+        <div class="contacts">
+            <div href="" class="elements">
+                <i><img src="/imagees/maps-and-flags.png" alt=""></i>
+                <h2>Our main branch</h2>
+                <p><a href="https://goo.gl/maps/AYZsexJtyqRmm8Y66">4 Farhod ko'chasi, Тошкент 100097</a></p>
             </div>
 
-            <div class="place-contents">
-                <div class="orient">
-                    <i ><img src="/imagees/location.png" alt=""></i>
-                    <h2>Mirzo Ulug`bek Street</h2>
-                    <a href="#">Find</a>
-                </div>
+            <div class="elements">
+                <i><img src="/imagees/phone-call.png" alt=""></i>
+                <h2>Phone number</h2>
+                <p><a href="">+998(97) 100-63-63</a></p>
             </div>
 
-            <div class="place-contents">
-                <div class="orient">
-                    <i ><img src="/imagees/location.png" alt=""></i>
-                    <h2>Farhod Street</h2>
-                    <a href="#">Find</a>
-                </div>
+            <div href="https://www.instagram.com/uno.mens.wear/" class="elements">
+                <i><img src="/imagees/instagram.png" alt=""></i>
+                <h2>Our Instagram</h2>
+                <p><a href="https://www.instagram.com/uno.mens.wear/">@uno.mens.wear</a></p>
+            </div>
+
+            <div href="https://t.me/UnoMensWear" class="elements">
+                <i><img src="/imagees/telegram.png" alt=""></i>
+                <h2>Our telegram</h2>
+                <p><a href="https://t.me/UnoMensWear">t.me/UnoMensWear</a></p>
             </div>
         </div>
-    </section> -->
-    
+    </header>
+
+
+
+    <section class="wrapper reveal">
+        <div class="modalForm">
+            <div class="actionBtns">
+                <button class="actionBtn signupBtn">Singup</button>
+                <button class="actionBtn loginBtn">Login</button>
+                <button class="moveBtn rightBtn">Singup</button>
+            </div>
+            <div class="userForm">
+                <form action="" class="form singup singupForm">
+                    <div class="inputGroup">
+                        <input type="text" placeholder="First name" autocomplete="offf">
+                    </div>
+                    <div class="inputGroup">
+                        <input type="text" placeholder="Last name" autocomplete="offf">
+                    </div>
+                    <div class="inputGroup">
+                        <input type="email" placeholder="Email address" autocomplete="offf">
+                    </div>
+                    <div class="inputGroup">
+                        <input type="password" placeholder="Create new password" autocomplete="offf">
+                    </div>
+                    <div class="inputGroup">
+                        <input type="password" placeholder="Confirm password" autocomplete="offf">
+                    </div>
+                    <button type="submit" class="submitBtn">Singup</button>
+                </form>
+
+                <form action="" class="form login">
+                    <div class="inputGroup">
+                        <input type="email" placeholder="Email address" autocomplete="offf">
+                    </div> 
+                    <div class="inputGroup">
+                        <input type="password" placeholder="Create new password" autocomplete="offf">
+                    </div>
+                    <button type="submit" class="submitBtn">Login</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="map">
+        <div class="map-content">
+            <h3 class="reveal">Find us on Map</h3>
+        </div>
+        <div class="map-element">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11994.136316992279!2d69.2040674!3d41.2754795!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x574588d25a82b1e1!2sUno%20Mens%20Wear!5e0!3m2!1sru!2s!4v1668669467906!5m2!1sru!2s" width="900" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+
+
+
+    <footer>
+        <h4>&copy; All right Reserved</h4>
+    </footer>
+
+
+    <script src="/JS files/main.js"></script>
 </body>
 </html>
