--- a/Html files/products.html
+++ b/Html files/products.html
@@ -18,7 +18,7 @@
             <li><a class="links" href="/Html files/index.html">Home</a></li>
             <li><a class="links" href="/Html files/about.html">About</a></li>
             <li><a class="links active" href="/Html files/products.html">Products</a></li>
-            <li><a class="links" href="/Html files/contact.html">Contact</a></li>
+            <li><a class="links" href="/Html files/contact.html">Log in</a></li>
             <li><a class="link-icon" href=""><img src="/imagees/shopping-cart.png" alt=""></a></li>
         </ul>
     </nav>
@@ -53,28 +53,28 @@
            <div class="blogs-in">
             <div class="blog1 reveal">
                 <h2 class="blog-heading">Sneakers</h2>
-                <a class="blog-link" href="#">Find</a>
+                <a class="blog-link" href="https://www.instagram.com/p/CjetQEzKvo5/?igshid=YmMyMTA2M2Y=">Find</a>
             </div>
 
             <div class="blog2 reveal">
                 <h2 class="blog-heading">Coats</h2>
-                <a class="blog-link" href="#">Find</a>
+                <a class="blog-link" href="https://www.instagram.com/p/Cjj7sb9qC1e/?igshid=YmMyMTA2M2Y=">Find</a>
             </div>
 
             <div class="blog3 reveal">
                 <h2 class="blog-heading">T-Shirts</h2>
-                <a class="blog-link" href="#">Find</a>
+                <a class="blog-link" href="https://www.instagram.com/uno.mens.wear/">Find</a>
             </div>
 
             <div class="blog4 reveal">
                 <h2 class="blog-heading">Shoes</h2>
-                <a class="blog-link" href="#">Find</a>
+                <a class="blog-link" href="https://www.instagram.com/p/CiHMXkAqs2W/?igshid=YmMyMTA2M2Y=">Find</a>
             </div>
            </div>
 
             <div class="blog5 reveal">
                 <h2 class="blog-heading">LimitedEditions</h2>
-                <a class="blog-link" href="#">Find</a>
+                <a class="blog-link" href="https://www.instagram.com/p/Cg_OKt2qwZS/?igshid=YmMyMTA2M2Y=">Find</a>
             </div>
         </div>
     </section>
@@ -88,30 +88,30 @@
             <div class="p-contents reveal">
                 <img src="/imagees/products-image (1).jpg" alt="">
                 <h3>Sheep Skin Coat</h3>
-                <a href="#">40$</a>
+                <a href="https://www.instagram.com/p/CjetQEzKvo5/?igshid=YmMyMTA2M2Y=">40$</a>
             </div>
 
             <div class="p-contents reveal">
                 <img src="/imagees/products-image (2).jpg" alt="">
                 <h3>Casual Hoodie</h3>
-                <a href="#">34$</a>
+                <a href="https://www.instagram.com/uno.mens.wear/">34$</a>
             </div>
 
             <div class="p-contents reveal">
                 <img src="/imagees/products-image (3).jpg" alt="">
                 <h3>Classic Style Pants</h3>
-                <a href="#">15$</a>
+                <a href="https://www.instagram.com/uno.mens.wear/">15$</a>
             </div>
 
             <div class="p-contents reveal">
                 <img src="/imagees/products-image (4).jpg" alt="">
                 <h3>Suit Blazer</h3>
-                <a href="#">55$</a>
+                <a href="https://www.instagram.com/uno.mens.wear/">55$</a>
             </div>
         </div>
 
         <div class="view">
-            <button class="btn product-btn"><a href="#">View all products</a></button>
+            <button class="btn product-btn"><a href="https://www.instagram.com/uno.mens.wear/">View all products</a></button>
         </div>
     </section>
 
@@ -120,7 +120,7 @@
         <div class="ad reveal">
             <h4 class="reveal">More limited editions off men`s perfume are available now!</h2>
             <div class="button reveal">
-                <button class="btn"><a href="https://www.instagram.com/uno.mens.wear/">Click for more</a></button>
+                <button class="btn"><a href="https://www.essensworld.ru/duhi-noir-ot-essens-2-d260147/">Click for more</a></button>
             </div>
         </div>
     </section>
@@ -131,7 +131,7 @@
                 <img src="/imagees/perfume.webp" alt="">
                 <div class="cost">
                     <h3>Valentino</h3>
-                    <a href="#">25$</a>
+                    <a href="https://www.valentino.com/en-be/men/fragrances">25$</a>
                 </div>
             </div>
 
@@ -139,7 +139,7 @@
                 <img src="/imagees/perfumes (1).webp" alt="">
                 <div class="cost">
                     <h3>Burberry</h3>
-                    <a href="#">38$</a>
+                    <a href="https://www.fragrantica.ru/designers/Burberry.html">38$</a>
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
                 <img src="/imagees/perfumes (2).webp" alt="">
                 <div class="cost">
                     <h3>Jimmy Choo-Blue</h3>
-                    <a href="#">45$</a>
+                    <a href="https://www.fragrantica.ru/perfume/Jimmy-Choo/Jimmy-Choo-10573.html">45$</a>
                 </div>
             </div>
 
@@ -155,7 +155,7 @@
                 <img src="/imagees/perfumes (3).webp" alt="">
                 <div class="cost">
                     <h3>Sauvage</h3>
-                    <a href="#">55$</a>
+                    <a href="https://www.fragrantica.ru/perfume/Dior/Sauvage-31861.html">55$</a>
                 </div>
             </div>
         </div>
