Some codes has been clarified while adding comment, especially, in jS, to make it more understandable

--- a/Html files/about.html
+++ b/Html files/about.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 
-    <header id="about-header" class="reveal">
+    <header id="about-header">
         <h2>#About <strong>US</strong></h2>
     </header>
     <section id="main-about">
@@ -59,6 +59,7 @@
 
 
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
 
 
 
