--- a/Html files/products.html
+++ b/Html files/products.html
@@ -171,10 +171,14 @@
         <div class="forms">
             <form action="">
                 <input type="text" name="" placeholder="Enter your E-mail address!">
-                <button class="submit">Submit</button>
+                <button class="submit" onclick="accepted()">Submit</button>
             </form>
         </div>
     </section>
+
+
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
 
 
     <footer>
