--- a/Html files/contact.html
+++ b/Html files/contact.html
@@ -109,6 +109,10 @@
 
 
 
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><a href="#"><img src="/imagees/up-arrow.png" alt=""></a></button>
+
+
     <footer>
         <h4>&copy; All right Reserved</h4>
     </footer>
