--- a/Html files/blog.html
+++ b/Html files/blog.html
@@ -17,10 +17,10 @@
         </div>
         <div id="navbar">
             <ul>
-                <li><a class="links active" href="../Html files/index.html">Home</a></li>
+                <li><a class="links" href="../Html files/index.html">Home</a></li>
                 <li><a class="links" href="../Html files/about.html">About</a></li>
                 <li><a class="links" href="../Html files/products.html">Products</a></li>
-                <li><a class="links" href="../Html files/blog.html">Blogs</a></li>
+                <li><a class="links active" href="../Html files/blog.html">Blogs</a></li>
                 <li><a class="links" href="../Html files/contact.html">Log in</a></li>
                 <li><a onclick="shop()" class="link-icon" href="../Html files/shop.html"><img src="../imagees/shopping-cart.png" alt=""></a></li>    
             </ul>
